--- a/lagrada/src/main/resources/application.properties
+++ b/lagrada/src/main/resources/application.properties
@@ -23,3 +23,9 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=dev,pgsql
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
