--- a/lagrada/src/main/resources/application.properties
+++ b/lagrada/src/main/resources/application.properties
@@ -8,3 +8,5 @@ logging.level.org.springframework.security=TRACE
 
 spring.docker.compose.enabled=true
 spring.docker.compose.file=docker-compose.yml
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
