--- a/lagrada/src/main/resources/application.properties
+++ b/lagrada/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.docker.compose.enabled=true
 spring.docker.compose.file=docker-compose.yml
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+storage.location=./uploads
+
+# Max attachment size
+spring.servlet.multipart.max-file-size=5MB
+# Max request size
+spring.servlet.multipart.max-request-size=10MB
+
+imgur.clientid=${IMGUR_CLIENTID:123456}
