descarto variables de entorno porque petada BOOM

--- a/lagrada/src/main/resources/application-sec.properties
+++ b/lagrada/src/main/resources/application-sec.properties
@@ -1,4 +1,4 @@
-jwt.secret=asisonlascosasyasilashemoscontado
+variables de entorno secreto username y pswd jwt.secret=asisonlascosasyasilashemoscontado
 jwt.duration=720
 jwt.refresh.duration=1440
 
